# SpaceSim

./: .gitignore  .gitmodules  .issuetracker  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
base/: CMakeLists.txt  base.c  defines.h
engine/: CMakeLists.txt  main.cpp
engine/ssWindow/: ssWindow.cpp  ssWindow.h
engine/ssWindow/simulation/: ssSWDebugDraw.cpp  ssSWDebugDraw.h  ssSimulationWorld.cpp  ssSimulationWorld.h  temp.cpp
engine/ssWindow/simulation/rendering/: ssSDLUtils.cpp
